# Meridian

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  README.md
backend/: .dockerignore  Dockerfile  manage.py  pyproject.toml  pytest.ini
backend/apps/audit/: apps.py  models.py
backend/apps/authorization/: actions.py  apps.py  context.py
backend/apps/configuration/: apps.py  models.py  schema_registry.py
backend/apps/documents/: apps.py  models.py  policy.py
backend/apps/identity/: apps.py
backend/apps/integrations/: apps.py  models.py
backend/apps/notifications/: apps.py  consumers.py  models.py
backend/apps/operations/: apps.py  models.py
backend/apps/opportunities/: apps.py  errors.py  member_keys.py
backend/apps/platform/: apps.py  permissions.py  request_context.py
backend/apps/products/: apps.py  errors.py  models.py  tasks.py
backend/apps/projects/: __init__.py  apps.py  errors.py  member_keys.py  models.py
backend/apps/stage_gates/: apps.py  errors.py  material_keys.py  models.py
backend/apps/work_items/: apps.py  errors.py  models.py  tasks.py
backend/config/: asgi.py  celery.py  urls.py  wsgi.py
backend/config/settings/: base.py  development.py  production.py  test.py
backend/openapi/: schema.yaml
backend/tests/: conftest.py
backend/tests/acceptance/: conftest.py  test_opportunity_to_project.py  test_platform_kernel.py  test_product_profile_migration.py
backend/tests/api/: test_error_contract.py  test_health.py  test_openapi.py  test_phase4_openapi.py
backend/tests/audit/: test_append_only.py  (+2 more)
(+461 files in other folders)
