[project]
name = "meridian-backend"
version = "0.1.0"
description = "Project Meridian backend (Django modular monolith)"
requires-python = ">=3.13,<3.14"
dependencies = [
    "celery>=5.6,<5.7",
    "django>=5.2,<5.3",
    "djangorestframework>=3.16,<3.17",
    "drf-spectacular>=0.28,<0.29",
    "gunicorn>=23,<24",
    "httpx>=0.28,<0.29",
    "jsonschema>=4.24,<5",
    "mysqlclient>=2.2,<2.3",
    "redis>=6,<7",
]

[dependency-groups]
dev = [
    "django-stubs>=5.2,<5.3",
    "djangorestframework-stubs>=3.16,<3.17",
    "mypy>=1.16,<2",
    "pytest>=8,<9",
    "pytest-cov>=6,<7",
    "pytest-django>=4.11,<5",
    "ruff>=0.12,<0.13",
]

[tool.ruff]
line-length = 100
target-version = "py313"
extend-exclude = ["**/migrations/**"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "C4", "DJ"]

[tool.ruff.lint.per-file-ignores]
"config/settings/*" = ["F403", "F405"]

[tool.mypy]
python_version = "3.13"
plugins = ["mypy_django_plugin.main"]
check_untyped_defs = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
exclude = ['(^|/)migrations/']

[tool.django-stubs]
django_settings_module = "config.settings.test"

[tool.coverage.run]
branch = true
source = ["apps", "config"]
omit = ["*/migrations/*", "*/tests/*", "config/wsgi.py", "config/asgi.py", "manage.py"]

[tool.coverage.report]
show_missing = true
